Dockerizing for local run.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,8 @@
 version: '3.8'
 services:
-  resume-app:
+  app:
     build: .
     ports:
       - "3000:3000"
-    environment:
-      - NODE_ENV=production
-      - PORT=3000
     volumes:
       - ./uploads:/app/uploads
