--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,11 @@
     "build": "echo 'No build step needed'"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.0",
-    "multer": "^1.4.4",
-    "puppeteer": "^21.0.0",
-    "pdf-parse": "^1.1.1",
     "mammoth": "^1.6.0",
-    "cors": "^2.8.5"
+    "multer": "^2.0.0",
+    "pdf-parse": "^1.1.1",
+    "puppeteer": "^22.8.2"
   }
 }
