--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "docx": "^9.5.0",
     "express": "^4.18.0",
     "mammoth": "^1.6.0",
     "multer": "^2.0.0",
     "pdf-parse": "^1.1.1",
+    "pdfkit": "^0.17.1",
     "puppeteer": "^22.8.2"
   }
 }
