Updated docker files.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,4 @@
+version: "3.8"
 services:
   app:
     build: .
@@ -5,19 +6,5 @@ services:
       - "3000:3000"
     volumes:
       - ./uploads:/app/uploads
-    develop:
-      watch:
-        - action: sync
-          path: ./src
-          target: /app/public/static/js
-          ignore:
-            - node_modules/
-        - action: sync
-          path: ./backend
-          target: /app
-          ignore:
-            - node_modules/
-        - action: rebuild
-          path: package.json
-        - action: rebuild
-          path: backend/package.json
+    environment:
+      NODE_ENV: production
