Updating for Netlify.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "resume-customizer",
+  "name": "resume-customizer-frontend",
   "version": "0.1.0",
   "type": "module",
   "private": true,
