--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "multer": "^2.0.0",
     "pdf-parse": "^1.1.1",
     "pdfkit": "^0.17.1",
-    "puppeteer": "^22.8.2"
+    "puppeteer": "^22.8.2",
+    "@anthropic-ai/sdk": "^0.20.0"
   }
 }
